--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style/main.css">
 
     <!--owl css-->
-    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/owl.carousel.min.css">
+    <link rel="stylesheet" href="/owl.theme.default.min.css">
 
     <!--Responsividade-->
-    <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="/responsive.css">
 
     <title>NETFLIX CLONE</title>
 </head>
@@ -49,24 +49,24 @@
 
     <div class="carrossel-filmes">
         <div class="owl-carousel owl-theme">
-            <div class="item"><img class="box-filme" src="img/mini1.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini2.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini3.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini4.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini5.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini6.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini7.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini8.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini9.jpg" alt="" srcset=""></div>
-            <div class="item"><img class="box-filme" src="img/mini10.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini1.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini2.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini3.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini4.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini5.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini6.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini7.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini8.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini9.jpg" alt="" srcset=""></div>
+            <div class="item"><img class="box-filme" src="/mini10.jpg" alt="" srcset=""></div>
         </div>
         
     </div>
 
     <script src="https://kit.fontawesome.com/3e956672a2.js" crossorigin="anonymous"></script>
-    <script src="js/owl/jquery.min.js"></script>
-    <script src="js/owl/owl.carousel.min.js"></script>
-    <script src="js/owl/setup.js"></script>
+    <script src="/jquery.min.js"></script>
+    <script src="/owl.carousel.min.js"></script>
+    <script src="/setup.js"></script>
     
 </body>
 </html>
